feat: add LlamaParse PDF loading and Markdown processing for text/table extraction.

--- a/.env.example
+++ b/.env.example
@@ -2,14 +2,19 @@
 OPENAI_API_KEY=
 GITHUB_TOKEN=
 COHERE_API_KEY=
+LLAMA_CLOUD_API_KEY=
 API_BASE_URL=https://models.github.ai/inference
+
+# LlamaParse Settings (for complex PDF parsing)
+LLAMAPARSE_ENABLED=true
+LLAMAPARSE_OUTPUT_TABLES_AS_HTML=false
 
 # Embedding Settings
 EMBEDDING_MODEL=openai/text-embedding-3-small
 EMBEDDING_DIMENSION=1536
 
 # LLM Settings
-LLM_MODEL=openai/gpt-5-chat
+LLM_MODEL=openai/gpt-4.1-mini
 LLM_TEMPERATURE=0.1
 LLM_MAX_TOKENS=2048
 
