--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ dependencies = [
     "pypdf>=4.0.0",
     "python-docx>=1.1.0",
     "tiktoken>=0.6.0",
+    "llama-parse>=0.5.0",
     
     # Embeddings & Vector Store
     "openai>=1.12.0",
