--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,6 +28,7 @@ dependencies = [
     "python-dotenv>=1.0.0",
     "cohere>=5.0.0",
     "pymupdf>=1.26.7",
+    "gunicorn>=23.0.0",
 ]
 
 [project.optional-dependencies]
