Add Supabase integration for document storage and management
- Implement Supabase client for document upload, retrieval, and metadata management.
- Create deployment guide for backend and frontend setup on Render and Streamlit Cloud.
- Add tests for Supabase integration, including document upload and statistics retrieval.
- Include example test document for verifying upload functionality.
- Update frontend to use environment variables for API base URL.
- Ensure proper error handling and logging in Supabase operations.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,6 +29,8 @@ dependencies = [
     "cohere>=5.0.0",
     "pymupdf>=1.26.7",
     "gunicorn>=23.0.0",
+    # Cloud Storage (Optional)
+    "supabase>=2.3.0",
 ]
 
 [project.optional-dependencies]
